--- a/mysql/sass/components/_tables.sass
+++ b/mysql/sass/components/_tables.sass
@@ -4,6 +4,11 @@
         border-collapse: collapse
         width: 100%
 
+        &.bg-white
+            border-color: #333
+            td
+                border-color: #333
+
         td
             border: 1px solid #FFF
             padding: 10px 15px
