Adiciona informações sobre operador ternário e operadores lógicos

--- a/ilp/assets/css/manualTrainee.css
+++ b/ilp/assets/css/manualTrainee.css
@@ -121,6 +121,9 @@ section {
   border: 1px solid #FFF;
   border-radius: 6px; }
 
+video {
+  width: 100%; }
+
 .code-block {
   background-color: #282c34;
   border-radius: 5px;
@@ -315,8 +318,8 @@ p {
     background-color: nill; }
 
 .red {
-  background-color: #F44336;
-  border-color: #F44336;
+  background-color: #d93427;
+  border-color: #d93427;
   color: #FFF; }
   .red:hover {
     background-color: nill; }
@@ -361,6 +364,20 @@ p {
   border-color: #CF649A;
   color: #333; }
   .border-sass-pink:hover {
+    background-color: nill; }
+
+.coffee {
+  background-color: #2C1210;
+  border-color: #2C1210;
+  color: #FFF; }
+  .coffee:hover {
+    background-color: nill; }
+
+.orange {
+  background-color: #D84315;
+  border-color: #D84315;
+  color: #FFF; }
+  .orange:hover {
     background-color: nill; }
 
 .tag, .tag-blue, .tag-green, .tag-orange, .tag-red {
@@ -605,6 +622,18 @@ p {
 .active {
   background-color: #FFF;
   color: #333; }
+
+.text table, section .text-right table {
+  border: 1px solid #FFF;
+  border-collapse: collapse;
+  width: 100%; }
+  .text table.bg-white, section .text-right table.bg-white {
+    border-color: #333; }
+    .text table.bg-white td, section .text-right table.bg-white td {
+      border-color: #333; }
+  .text table td, section .text-right table td {
+    border: 1px solid #FFF;
+    padding: 10px 15px; }
 
 /* PAGES - Individual styles */
 .reduces {
