--- a/ilp/sass/components/_colors.sass
+++ b/ilp/sass/components/_colors.sass
@@ -8,7 +8,7 @@
     +coloredElement(#2196F3)
 
 .red
-    +coloredElement(#F44336)
+    +coloredElement(#d93427)
 
 .deed-purple
     +coloredElement(#6024C7)
@@ -26,4 +26,10 @@
     +coloredElement(#A33239)
 
 .border-sass-pink
-    @include coloredElement(#FFF, #CF649A, #333)
+    +coloredElement(#FFF, #CF649A, #333)
+
+.coffee
+    +coloredElement(#2C1210, #2C1210, #FFF)
+
+.orange
+    +coloredElement(#D84315, #D84315, #FFF)
