--- a/ilp/sass/layout/_base.sass
+++ b/ilp/sass/layout/_base.sass
@@ -101,6 +101,9 @@ section
     border: 1px solid #FFF
     border-radius: 6px
 
+video
+    width: 100%
+
 .code-block
     background-color: #282c34
     border-radius: 5px
