--- a/ilp/sass/manualTrainee.sass
+++ b/ilp/sass/manualTrainee.sass
@@ -14,6 +14,7 @@
 @import components/buttons
 @import components/colors
 @import components/tags
+@import components/tables
 
 /* PAGES - Individual styles
 @import pages/infojr
