--- a/sass-b/layout/_base.sass
+++ b/sass-b/layout/_base.sass
@@ -20,6 +20,7 @@ textarea
 
 ul
     margin: 0
+    text-align: left
 
 section
     width: 100%
@@ -94,6 +95,11 @@ section
 
 .align-top
     vertical-align: top!important
+
+.c-box
+    border-radius: 6px
+    margin: 10px 0
+    padding: 15px 30px
 
 .w-box
     padding: 30px
