--- a/assets/css/manualTrainee.css
+++ b/assets/css/manualTrainee.css
@@ -143,7 +143,8 @@ section {
   text-align: center; }
 
 .full {
-  min-height: 100%; }
+  height: 100%;
+  max-height: 760px; }
 
 .justify {
   text-align: justify;
