--- a/sass-b/layout/_base.sass
+++ b/sass-b/layout/_base.sass
@@ -86,7 +86,8 @@ section
     text-align: center
 
 .full
-    min-height: 100%
+    height: 100%
+    max-height: 760px
 
 .justify
     text-align: justify
