--- a/sass-b/components/_tables.sass
+++ b/sass-b/components/_tables.sass
@@ -12,3 +12,6 @@
         td
             border: 1px solid #FFF
             padding: 10px 15px
+
+        tr:nth-child(even)
+            background-color: #d9e5f8
