--- a/sass-b/manualTrainee.sass
+++ b/sass-b/manualTrainee.sass
@@ -16,6 +16,7 @@
 @import components/colors
 @import components/tags
 @import components/tables
+@import components/highlight
 
 /* PAGES - Individual styles
 @import pages/infojr
